fix: carousel scroll bar, logo overlap | mkn

--- a/src/components/02_molecules/navigation/navigation.module.scss
+++ b/src/components/02_molecules/navigation/navigation.module.scss
@@ -82,5 +82,6 @@
     transition: opacity ease-in-out 0.3s;
     opacity: 0.8;
     visibility: visible;
+    z-index: 5;
   }
 }
